添加mysql数据库支持

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>oracle-connector-java</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
+
 		<!-- spring start -->
 		<!-- Core utilities used by other modules. Define this if you use Spring 
 			Utility APIs (org.springframework.core.*/org.springframework.util.*) -->
