--- a/src/main/resources/config/jdbc.properties
+++ b/src/main/resources/config/jdbc.properties
@@ -1,7 +1,13 @@
-jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@localhost:1521/orcl
-jdbc.username=activiti
-jdbc.password=activiti
+jdbc.driverClassName=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://localhost:3306/activiti?useUnicode=true&characterEncoding=utf8
+jdbc.username=root
+jdbc.password=root
+
+##oracle
+#jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+#jdbc.url=jdbc:oracle:thin:@localhost:1521/orcl
+#jdbc.username=activiti
+#jdbc.password=activiti
 
 druid.initialSize=3
 druid.maxActive=20
